; ModuleID = '/home/carl/AnghaBench/tg/extr_loop.c_empty_auth_file.c'
source_filename = "/home/carl/AnghaBench/tg/extr_loop.c_empty_auth_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@TLS = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@TG_SERVER_TEST_1 = common dso_local global i32 0, align 4
@TG_SERVER_TEST_2 = common dso_local global i32 0, align 4
@TG_SERVER_TEST_3 = common dso_local global i32 0, align 4
@TG_SERVER_TEST_DEFAULT = common dso_local global i32 0, align 4
@TG_SERVER_1 = common dso_local global i32 0, align 4
@TG_SERVER_2 = common dso_local global i32 0, align 4
@TG_SERVER_3 = common dso_local global i32 0, align 4
@TG_SERVER_4 = common dso_local global i32 0, align 4
@TG_SERVER_5 = common dso_local global i32 0, align 4
@TG_SERVER_DEFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @empty_auth_file() #0 {
  %1 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %2 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  %3 = load i64, i64* %2, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %24

5:                                                ; preds = %0
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %7 = load i32, i32* @TG_SERVER_TEST_1, align 4
  %8 = load i32, i32* @TG_SERVER_TEST_1, align 4
  %9 = call i32 @strlen(i32 %8)
  %10 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %6, i32 0, i32 1, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %7, i32 %9, i32 443)
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %12 = load i32, i32* @TG_SERVER_TEST_2, align 4
  %13 = load i32, i32* @TG_SERVER_TEST_2, align 4
  %14 = call i32 @strlen(i32 %13)
  %15 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %11, i32 0, i32 2, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %12, i32 %14, i32 443)
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %17 = load i32, i32* @TG_SERVER_TEST_3, align 4
  %18 = load i32, i32* @TG_SERVER_TEST_3, align 4
  %19 = call i32 @strlen(i32 %18)
  %20 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %16, i32 0, i32 3, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %17, i32 %19, i32 443)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %22 = load i32, i32* @TG_SERVER_TEST_DEFAULT, align 4
  %23 = call i32 @bl_do_set_working_dc(%struct.TYPE_4__* %21, i32 %22)
  br label %53

24:                                               ; preds = %0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %26 = load i32, i32* @TG_SERVER_1, align 4
  %27 = load i32, i32* @TG_SERVER_1, align 4
  %28 = call i32 @strlen(i32 %27)
  %29 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %25, i32 0, i32 1, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %26, i32 %28, i32 443)
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %31 = load i32, i32* @TG_SERVER_2, align 4
  %32 = load i32, i32* @TG_SERVER_2, align 4
  %33 = call i32 @strlen(i32 %32)
  %34 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %30, i32 0, i32 2, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %31, i32 %33, i32 443)
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %36 = load i32, i32* @TG_SERVER_3, align 4
  %37 = load i32, i32* @TG_SERVER_3, align 4
  %38 = call i32 @strlen(i32 %37)
  %39 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %35, i32 0, i32 3, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %36, i32 %38, i32 443)
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %41 = load i32, i32* @TG_SERVER_4, align 4
  %42 = load i32, i32* @TG_SERVER_4, align 4
  %43 = call i32 @strlen(i32 %42)
  %44 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %40, i32 0, i32 4, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %41, i32 %43, i32 443)
  %45 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %46 = load i32, i32* @TG_SERVER_5, align 4
  %47 = load i32, i32* @TG_SERVER_5, align 4
  %48 = call i32 @strlen(i32 %47)
  %49 = call i32 @bl_do_dc_option(%struct.TYPE_4__* %45, i32 0, i32 5, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i32 0, i32 %46, i32 %48, i32 443)
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** @TLS, align 8
  %51 = load i32, i32* @TG_SERVER_DEFAULT, align 4
  %52 = call i32 @bl_do_set_working_dc(%struct.TYPE_4__* %50, i32 %51)
  br label %53

53:                                               ; preds = %24, %5
  ret void
}

declare dso_local i32 @bl_do_dc_option(%struct.TYPE_4__*, i32, i32, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @bl_do_set_working_dc(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
